[gd_scene load_steps=12 format=3 uid="uid://dcec5dpj4viaa"]

[ext_resource type="Script" uid="uid://cd5jgtlg8kex6" path="res://things/bubble.gd" id="1_b7bh6"]
[ext_resource type="Texture2D" uid="uid://d3oiukttuhiq1" path="res://assets/sprites/Bubble_types.png" id="2_3qslm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wcykv"]
radius = 7.0

[sub_resource type="Animation" id="Animation_3mr26"]
resource_name = "Pon"
length = 0.33333668
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.10000001, 0.20000002, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Rect2(4, 4, 16, 16), Rect2(25, 3, 16, 16), Rect2(46, 4, 16, 16), Rect2(67, 4, 16, 16)]
}

[sub_resource type="Animation" id="Animation_b7bh6"]
length = 0.14
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Rect2(109, 4, 16, 16), Rect2(130, 4, 16, 16)]
}

[sub_resource type="Animation" id="Animation_3qslm"]
resource_name = "RED"
length = 0.06667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(88, 4, 16, 16)]
}

[sub_resource type="Animation" id="Animation_xtjm5"]
resource_name = "RED_FLICKER"
length = 0.13333668
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Rect2(67, 4, 16, 16), Rect2(88, 4, 16, 16)]
}

[sub_resource type="Animation" id="Animation_36l50"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(83, 43, 15, 16)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hb1c7"]
_data = {
&"EXPAND": SubResource("Animation_3mr26"),
&"PON": SubResource("Animation_b7bh6"),
&"RED": SubResource("Animation_3qslm"),
&"RED_FLICKER": SubResource("Animation_xtjm5"),
&"RESET": SubResource("Animation_36l50")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_b7bh6"]
radius = 5.0990195

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_b7bh6"]
radius = 6.0
height = 16.0

[node name="Bubble" type="RigidBody2D"]
collision_layer = 0
lock_rotation = true
script = ExtResource("1_b7bh6")
actorTimerOffset = 1.0

[node name="DebugLayer" type="MarginContainer" parent="."]
visible = false
offset_left = -29.0
offset_top = -30.0
offset_right = 28.0
offset_bottom = -7.0

[node name="info" type="Label" parent="DebugLayer"]
layout_mode = 2
theme_override_font_sizes/font_size = 7
text = "test"
horizontal_alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_wcykv")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_3qslm")
region_enabled = true
region_rect = Rect2(83, 43, 15, 16)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hb1c7")
}

[node name="PopTimer" type="Timer" parent="."]
wait_time = 7.5
one_shot = true

[node name="PrepopTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="RedTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="Hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 32
collision_mask = 256

[node name="HitboxShape" type="CollisionShape2D" parent="Hitbox"]
visible = false
shape = SubResource("CircleShape2D_b7bh6")
debug_color = Color(0.9856233, 0, 0.33656996, 0.41960785)

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CapsuleShape2D_b7bh6")
debug_color = Color(0, 0.64153314, 0.3377669, 0.41960785)

[node name="Debuglayer" type="CanvasLayer" parent="."]
